Fixed z-index problem with menu

--- a/wp-content/themes/starkers-child/styles/sass/main.scss
+++ b/wp-content/themes/starkers-child/styles/sass/main.scss
@@ -42,6 +42,7 @@ p {
 	background-color: rgba(black, 0.3);
 	border-radius: $pad/2;
 	padding: 0 $pad;
+	z-index: 100;
 
 	> li {
 		height: 25px;
@@ -109,6 +110,7 @@ p {
 	padding-bottom: 50px;
 	min-height: 100%;
 	margin-bottom: -30px;
+	z-index: 1;
 }
 
 h1, h2, h3, h4 {
